# LMAO

./: .replit  main.py  pyproject.toml  replit.md
admin/assets/css/: dark-theme.css
attached_assets/: Pasted--2025-12-09-14-20-35-0000-5544-INFO-Starting-gunicorn-2_1765290067534.txt  Pasted--2025-12-09-15-46-08-0000-13898-INFO-Starting-gunicorn-_1765295260263.txt  Pasted-ProgrammingError-sqlalchemy-exc-ProgrammingError-psycop_1765229543792.txt  Pasted-STEP-7-Uploading-project-files-Workspace-root-home-runn_1765403239652.txt
templates/: index.html
vps_manager/: app.py  migrate_db.py  requirements.txt
vps_manager/templates/: add_vps.html  backup.html  base.html  dashboard.html  deploy.html  index.html  logs.html  settings.html  ssl_setup.html  view_vps.html
